<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="travelAdapter"
            type="com.example.apptravel.adapter.started.TravelApiAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5E5E5">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="412dp"
            android:layout_height="400dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/unsplash_backround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deals"
            android:layout_width="291dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="top"
            android:text="@string/deals"
            android:textAppearance="@style/deals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/flights2"
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal|top"
            android:text="@string/flights"
            android:textAppearance="@style/flights"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFly" />

        <TextView
            android:id="@+id/hotels"
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal|top"
            android:text="@string/hotels"
            android:textAppearance="@style/flights"
            app:layout_constraintStart_toEndOf="@+id/flights2"
            app:layout_constraintTop_toBottomOf="@+id/buttonFly" />

        <TextView
            android:id="@+id/hotels2"
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal|top"
            android:text="@string/cars"
            android:textAppearance="@style/flights"
            app:layout_constraintStart_toEndOf="@+id/flights2"
            app:layout_constraintTop_toBottomOf="@+id/buttonFly" />

        <TextView
            android:id="@+id/hotels3"
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:layout_marginStart="262dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal|top"
            android:text="@string/taxi"
            android:textAppearance="@style/flights"
            app:layout_constraintStart_toEndOf="@+id/flights2"
            app:layout_constraintTop_toBottomOf="@+id/buttonFly" />

        <TextView
            android:id="@+id/banner_head"
            android:layout_width="251dp"
            android:layout_height="76dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="top"
            android:lineSpacingExtra="-2sp"
            android:text="@string/banner_head"
            android:textAppearance="@style/banner_head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonFly"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/started_buton"
            android:backgroundTint="#4DFCFCFD"
            android:src="@drawable/fly_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonHotel"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/started_buton"
            android:backgroundTint="#4DFCFCFD"
            android:src="@drawable/hotels_icon"
            app:layout_constraintEnd_toStartOf="@+id/buttonCar"
            app:layout_constraintStart_toEndOf="@+id/buttonFly"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonCar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/started_buton"
            android:backgroundTint="#4DFCFCFD"
            android:src="@drawable/cars_icon"
            app:layout_constraintEnd_toStartOf="@+id/buttonTaxi"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/buttonTaxi"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/started_buton"
            android:backgroundTint="#4DFCFCFD"
            android:clickable="true"
            android:src="@drawable/taxi_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsApp"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-5dp"
            android:background="#E5E5E5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deals"
            app:tabGravity="start"
            app:tabIndicatorColor="@color/tabs_selected"
            app:tabIndicatorFullWidth="false"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/tabs_selected"
            app:tabTextAppearance="@style/TabLayoutTextAppearance"
            app:tabTextColor="@color/tabs_not_selected">


            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/flights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flights" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotels" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transportations" />
        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="395dp"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabsApp">
        </androidx.viewpager2.widget.ViewPager2>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>