<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="guideVerticalAdapter"
            type="com.example.apptravel.adapter.guide.GuideVerticalAdapter" />

        <variable
            name="guideHorizontalAdapter"
            type="com.example.apptravel.adapter.guide.GuideHoriAdapter" />

        <variable
            name="categoryAdapter"
            type="com.example.apptravel.adapter.guide.CategoryAdapter" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5E5E5">


        <TextView
            android:id="@+id/search"
            android:layout_width="91dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="top"
            android:text="@string/guide"
            android:textAppearance="@style/screen_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/might_need_"
            android:layout_width="145dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:gravity="top"
            android:text="@string/might_need_"
            android:textAppearance="@style/might_need_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/see_all"
            android:layout_width="54dp"
            android:layout_height="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:gravity="right|top"
            android:text="@string/see_all"
            android:textAppearance="@style/see_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="396dp"
            android:layout_height="132dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:adapter="@{guideVerticalAdapter}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/might_need_"
            tools:listitem="@layout/guide_item_vertical" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/search_screen_icon"
            android:hint="@string/whereIs"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHori"
            android:layout_width="396dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="340dp"
            android:adapter="@{guideHorizontalAdapter}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/might_need_"
            tools:listitem="@layout/guide_item_horizantal" />

        <TextView
            android:id="@+id/top_pick_ar"
            android:layout_width="159dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="top"
            android:text="@string/top_pick_ar"
            android:textAppearance="@style/top_pick_ar"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewHori"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategory"
            android:layout_width="399dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:adapter="@{categoryAdapter}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            tools:listitem="@layout/category_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>